# django-admin-no-more-blue

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg
blue/: urls.py  views.py
blue/static/admin/css_apple/: changelists.css  forms.css  nav_sidebar.css  widgets.css
blue/static/admin/css_blueberry/: autocomplete.css  changelists.css  forms.css  nav_sidebar.css
blue/static/admin/css_melon/: autocomplete.css  changelists.css  forms.css  widgets.css
blue/static/admin/css_peach/: base.css  changelists.css  forms.css  nav_sidebar.css  widgets.css
blue/static/admin/css_plum/: base.css  changelists.css  nav_sidebar.css
blue/templates/admin/: base.html  change_list.html  index.html
blue/templates/blue/: themeselector.html
blue/templatetags/: theme_static.py  themes.py
blue/themes/: manager.py
no_more_blue/: apps.py  urls.py  views.py
no_more_blue/static/admin/css_apple/: autocomplete.css  base.css  changelists.css  forms.css  widgets.css
no_more_blue/static/admin/css_base/: autocomplete.css  changelists.css  forms.css  login.css  nav_sidebar.css  widgets.css
no_more_blue/static/admin/css_blueberry/: autocomplete.css  base.css  changelists.css  forms.css  nav_sidebar.css  widgets.css
no_more_blue/static/admin/css_grapes/: autocomplete.css  base.css  changelists.css  forms.css  nav_sidebar.css  widgets.css
no_more_blue/templates/admin/: base.html  change_form.html  change_list.html  login.html
no_more_blue/templates/no_more_blue/: themeselector.html
no_more_blue/templatetags/: theme_static.py  themes.py
no_more_blue/themes/: manager.py
(+20 files in other folders)
