[metadata]
name = django-admin-no-more-blue
version = 0.1
description = A Django Admin skin that can be set for the entire project or for each session.
long_description = file: README.rst
url = https://github.com/CoLuiza/django-admin-no-more-blue
author = Luiza-Mihaela Coman
author_email = lmcdidi@gmail.com
license = BSD-2-Clause-FreeBSD
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1.5
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: